--- a/content/plugins/antispam-bee/lang/antispam_bee-de_DE.po
+++ b/content/plugins/antispam-bee/lang/antispam_bee-de_DE.po
@@ -36,8 +36,11 @@ msgstr "Leere Daten"
 msgid "CSS Hack"
 msgstr "CSS Hack"
 
-msgid "Server IP"
-msgstr "Server IP"
+msgid "Comment time"
+msgstr "Kommentarzeit"
+
+msgid "Fake IP"
+msgstr "Gefälschte IP"
 
 msgid "Local DB Spam"
 msgstr "Lokale Spamdatenbank"
@@ -124,6 +127,12 @@ msgstr "Genehmigten Kommentatoren vertrauen"
 
 msgid "No check for already commenting users"
 msgstr "Keine Prüfung bereits kommentierender Nutzer"
+
+msgid "Consider the comment time"
+msgstr "Kommentarzeit berücksichtigen"
+
+msgid "Not recommended when using page caching"
+msgstr "Nicht empfohlen beim Caching von Blogseiten"
 
 msgid "BBCode is spam"
 msgstr "BBCode als Spam einstufen"
